--- a/src/style.css
+++ b/src/style.css
@@ -90,7 +90,7 @@ input.percentBox {
     color: hsl(183, 100%, 15%);
 }
 
-#num_Input {
+#peopleNum {
     position: relative;
     bottom: 25px;
 }
@@ -113,16 +113,28 @@ input.percentBox {
     width: 400px;
 }
 
-#tip {
+#tipContainer {
     position: relative;
     top: 60px;
     left: 50px;
 }
 
+#tip {
+    position: relative;
+    bottom: 65px;
+    left: 180px
+}
+
+#totalContainer {
+    position: relative;
+    top: 15px;
+    left: 50px;
+}
+
 #total {
     position: relative;
-    top: 100px;
-    left: 50px;
+    bottom: 65px;
+    left: 180px
 }
 
 .text1{
@@ -136,11 +148,17 @@ input.percentBox {
     margin-top: 5px;
 }
 
+.text3 {
+    color: hsl(172, 67%, 45%);
+    font-size: 28px;
+    font-weight: bold;
+}
+
 #reset {
     border-radius: 5px;
     height: 50px;
     position: relative;
-    top: 200px;
+    top: 50px;
     left: 37px;
     width: 329px;
     font-size: 20px;
@@ -148,3 +166,5 @@ input.percentBox {
     color: hsl(183, 100%, 15%);
     background-color: hsl(172, 67%, 45%);
 }
+
+button:hover {cursor: pointer;}
